<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="error_verion_notsame_xviewsdk">版本不一致,请更新</string>
    <string name="error_connect_to_server_xviewsdk">无法链接到服务器，请确认网络链接</string>
    <string name="error_incorrect_password_xviewsdk">用户名或者密码错误</string>
    <string name="error_time_out_xviewsdk">登录超时,稍后再试</string>
    <string name="vertical_screen_xviewsdk">竖屏</string>
    <string name="horizontal_screen_xviewsdk">横屏</string>
    <string name="logingout_xviewsdk">正在退出</string>
    <string name="lock_conf_xviewsdk">锁定会议</string>
    <string name="enable_setting2_xviewsdk">开启</string>
    <string name="conf_number_xviewsdk">会议号</string>
    <string name="video_ide_xviewsdk">视频合成</string>
    <string name="file_cabinet_xviewsdk">文件柜</string>
    <string name="send_text_xviewsdk">发  送</string>
    <string name="public_chat_xviewsdk">公共聊天</string>
    <string name="search_xviewsdk">搜索</string>
    <string name="view2_xviewsdk"> 视图</string>
    <string name="gallery_xviewsdk">画廊</string>
    <string name="media_setting_xviewsdk">音视频设置</string>
    <string name="close_camera_xviewsdk">关闭</string>
    <string name="app_name_xviewsdk">开会宝</string>
    <string name="userlist_xviewsdk">参会者</string>
    <string name="enterconf_pwd_xviewsdk">输入会议密码</string>
    <string name="view_xviewsdk">视图</string>
    <string name="voice_flow_xviewsdk">声音流量</string>
    <string name="video_flow_xviewsdk">视频流量</string>
    <string name="video_frame_rate_xviewsdk">视频帧率</string>
    <string name="video_coding_xviewsdk">视频编码</string>
    <string name="enable_setting_xviewsdk">开启 ></string>
    <string name="local_video_xviewsdk">本地视频</string>
    <string name="settings_xviewsdk">系统设置</string>
    <string name="ip_xviewsdk">服务器地址:</string>
    <string name="port_xviewsdk">服务器端口:</string>
    <string name="manual_setup_xviewsdk">手动设置</string>
    <string name="default_setup_xviewsdk">默认设置</string>
    <string name="setting_server_text_xviewsdk">网络设置</string>
    <string name="please_input_query_key_xviewsdk">请输入查询关键字</string>
    <string name="logout_xviewsdk">&#160;&#160;&#160;&#160;&#160;&#160;您的账号在另一地点登录，您被迫下线。</string>
    <string name="enterconf_xviewsdk">加入会议</string>
    <string name="login_xviewsdk">登录</string>
    <string name="password_xviewsdk">密码</string>
    <string name="account_xviewsdk">用户名</string>
    <string name="tourist_xviewsdk">游客</string>
    <string name="conf_id_xviewsdk">会议号</string>
    <string name="dial_activity_xviewsdk">拨号界面</string>
    <string name="company_contacts_xviewsdk">企业通讯录</string>
    <string name="send_xviewsdk">发送</string>
    <string name="chat_xviewsdk">聊天</string>
    <string name="record_meeting_xviewsdk">录制Metting</string>
    <string name="yes_xviewsdk">是</string>
    <string name="not_xviewsdk">否</string>
    <string name="add_to_date_xviewsdk">添加到日历</string>
    <string name="yicheng_xviewsdk">议程</string>
    <string name="end_xviewsdk">结束</string>
    <string name="start_xviewsdk">开始</string>
    <string name="conf_subject_xviewsdk">会议主题:</string>
    <string name="invite_xviewsdk">邀请</string>
    <string name="yuyue_xviewsdk">预约</string>
    <string name="conf_xviewsdk">会议</string>
    <string name="anpai_conf_xviewsdk">安排会议</string>
    <string name="join_conf_xviewsdk">加入会议</string>
    <string name="conf_manage_xviewsdk">会议管理</string>
    <string name="catic_banquan_xviewsdk">星澜科技 版权所有</string>
    <string name="setting_about_text_xviewsdk">关于</string>
    <string name="action_settings_xviewsdk">Settings</string>
    <string name="net_bad_connet_timeout_xviewsdk">网络不佳,连接超时</string>
    <string name="enting_xviewsdk">正在进入...</string>
    <string name="yesterday_xviewsdk">昨天</string>
    <string name="minute_ago_xviewsdk">分钟前</string>
    <string name="hour_ago_xviewsdk">小时前</string>
    <string name="a_moment_ago_xviewsdk">刚刚</string>
    <string name="year_xviewsdk">年</string>
    <string name="month_xviewsdk">月</string>
    <string name="day_xviewsdk">日</string>
    <string name="restart_xviewsdk">重启</string>
    <string name="exit_xviewsdk">退出</string>
    <string name="downloading_xviewsdk">正在下载新版本</string>
    <string name="later_xviewsdk">以后再说</string>
    <string name="now_xviewsdk">立即更新</string>
    <string name="hasnew_xviewsdk">亲,有新版本发布了</string>
    <string name="updatesoft_xviewsdk">软件版本更新</string>
    <string name="nosd_xviewsdk">无法下载安装文件，请检查SD卡是否挂载</string>
    <string name="set_xviewsdk">设置</string>
    <string name="anpai_xviewsdk">安排</string>
    <string name="lianxiren_xviewsdk">联系人</string>
    <string name="tab_myconf_xviewsdk">tab我的会议</string>
    <string name="tab_anpai_xviewsdk">tab安排</string>
    <string name="tab_lianxiren_xviewsdk">tab联系人</string>
    <string name="tab_setting_xviewsdk">tab设置</string>
    <string name="noip_xviewsdk">IP地址不能为空</string>
    <string name="noport_xviewsdk">端口不能为空</string>
    <string name="this_operation_will_logout_xviewsdk">是否退出当前账号?</string>
    <string name="you_not_login_xviewsdk">您并未登录~</string>
    <string name="this_operation_will_exit_applcation_xviewsdk">是否退出程序?</string>
    <string name="enterconffail_xviewsdk">进入会议失败</string>
    <string name="enterconfsuccess_xviewsdk">welcome</string>
    <string name="please_input_password_xviewsdk">请输入会议密码:</string>
    <string name="myconf_xviewsdk">我的会议</string>
    <string name="whosconf_xviewsdk">的会议</string>
    <string name="gl_ver_low_xviewsdk">OpenGL版本过低,可能会导致程序crash</string>
    <string name="server_reject_xviewsdk">服务器拒绝</string>
    <string name="connect_error_xviewsdk">连接错误</string>
    <string name="login_fail_xviewsdk">登录失败</string>
    <string name="wrong_confId_xviewsdk">会议号不存在</string>
    <string name="first_close_video_xviewsdk">请先关闭视频</string>
    <string name="first_open_video_xviewsdk">请先打开视频</string>
    <string name="local_camera_closed_xviewsdk">本地摄像头已经关闭</string>
    <string name="backhome_xviewsdk">退到后台,程序将在3秒后退出会议</string>
    <string name="netdissconnected_xviewsdk">网络已断开,请先连接网络</string>
    <string name="one_exit_conf_xviewsdk">退出会议</string>
    <string name="kickoff_conf_xviewsdk">您被主持人请出会议</string>
    <string name="apply_apply_xviewsdk">应用</string>
    <string name="closed_video_xviewsdk">此视频已关闭</string>
    <string name="opened_video_xviewsdk">此视频已打开</string>
    <string name="videframe_a_xviewsdk">10 ></string>
    <string name="videframe_b_xviewsdk">20 ></string>
    <string name="videframe_c_xviewsdk">30 ></string>
    <string name="videframe_d_xviewsdk">40 ></string>
    <string name="videflow_a_xviewsdk">128Kbps ></string>
    <string name="videflow_b_xviewsdk">256Kbps ></string>
    <string name="videflow_c_xviewsdk">512Kbps ></string>
    <string name="videflow_d_xviewsdk">1024Kbps ></string>
    <string name="standard_setting_xviewsdk">低 ></string>
    <string name="high_setting_xviewsdk">中 ></string>
    <string name="allhigh_setting_xviewsdk">标清 ></string>
    <string name="superhigh_setting_xviewsdk">高清 ></string>
    <string name="unlock_xviewsdk">未锁定</string>
    <string name="locked_xviewsdk">已锁定</string>
    <string name="maxfour_xviewsdk">最多打开4路视频,请先关闭其他参会者视频</string>
    <string name="hasopen_xviewsdk">已经查看了该路视频</string>
    <string name="cannotvideodevice_xviewsdk">对方摄像头设置为禁用</string>
    <string name="novideodevice_xviewsdk">对方没有摄像头设备</string>
    <string name="sliding_up_and_down_xviewsdk">上下滑动可进行翻页</string>
    <string name="login_success_xviewsdk">登录成功</string>
    <string name="content_not_empty_xviewsdk">内容不能为空</string>
    <string name="isExit_xviewsdk">是否退出会议?</string>
    <string name="isHangup_xviewsdk">结束通话?</string>
    <string name="onecamera_xviewsdk">只有一个摄像头，不能切换</string>
    <string name="change_camera_fast_xviewsdk">slowly~~</string>
    <string name="wb_xviewsdk">白板</string>
    <string name="setting_exit_text_xviewsdk">退出</string>
    <string name="force_offline_xviewsdk">您的账号已在别处登录,被迫下线</string>
    <string name="local_xviewsdk"> (本地)</string>
    <string name="mediashare_xviewsdk">_媒体共享</string>
    <string name="pagenumbers_xviewsdk">页</string>
    <string name="conf_time_xviewsdk">yyyy年MM月dd日 E,HH:mm</string>
    <string name="no_data_xviewsdk">网络异常...</string>
    <string name="title_xviewsdk">标题</string>
    <string name="sure_xviewsdk">确认</string>
    <string name="cancel_xviewsdk">取消</string>
    <string name="hint_xviewsdk">提示</string>
    <string name="content_xviewsdk">内容</string>
    <string name="head_xviewsdk">这里是HeadView</string>
    <string name="pull_to_refresh_xviewsdk">下拉刷新</string>
    <string name="release_to_refresh_xviewsdk">释放立即刷新</string>
    <string name="refresh_succeed_xviewsdk">刷新成功</string>
    <string name="refresh_fail_xviewsdk">刷新失败</string>
    <string name="pullup_to_load_xviewsdk">上拉加载更多</string>
    <string name="release_to_load_xviewsdk">释放立即加载</string>
    <string name="loading_xviewsdk">正在加载...</string>
    <string name="load_succeed_xviewsdk">加载成功</string>
    <string name="load_fail_xviewsdk">加载失败</string>
    <string name="refreshing_xviewsdk">正在刷新...</string>

</resources>