<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corners_bg_xviewsdk"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/group_menu1_passfile_xviewsdk"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded2_corners_bg_xviewsdk"
                android:gravity="center"
                android:text="@string/local_video_xviewsdk"
                android:textColor="#ffffff"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:background="#1d93c3" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#f0f0f0" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/tvOpenPL_xviewsdk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|left"
                android:text="@string/enable_setting2_xviewsdk"
                android:textColor="#454545"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/cbOpen_xviewsdk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/tvClosePL_xviewsdk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|left"
                android:text="@string/close_camera_xviewsdk"
                android:textColor="#454545"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/cbClose_xviewsdk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:background="#f0f0f0" >
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>